fix: About section jumping on pin

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -1,9 +1,4 @@
 @use "../../styles/config.scss" as *;
 
 .about {
-  &__features {
-    @media (min-width: $breakpoint-desktop) {
-      margin-block-start: clamp(250px, 35vh, 400px);
-    }
-  }
 }
